# Minesweeper

./: .clang-format  .cmake-format.json  .gitignore  AboutDialog.cpp  AboutDialog.h  App.cpp  App.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CustomFieldDialog.cpp  Folder.DotSettings  MainWindow.cpp  MainWindow.h  MineField.cpp  MineField.h  Minesweeper.rc  Minesweeper.sln  Minesweeper.sln.DotSettings  Minesweeper.slnx  README.md  SevenSegmentDisplay.cpp
Minesweeper/: AboutDialog.cpp  AboutDialog.h  App.cpp  App.h  BestTimesDialog.cpp  BestTimesDialog.h  ColorExtension.cs  CustomDifficultyDialog.Designer.cs  CustomDifficultyDialog.cs  CustomFieldDialog.cpp  CustomFieldDialog.h  Difficulty.cs  GraphicsExtension.cs  LICENSE-2.0-text.h  MainWindow.Designer.cs  MainWindow.cpp  MainWindow.cs  MainWindow.h  MainWindow.resx  MineField.Designer.cs  MineField.cpp  MineField.cs  MineField.h  Minesweeper.csproj  Minesweeper.rc  Minesweeper.vcxproj  Minesweeper.vcxproj.filters  Program.cs  Settings.cpp  Settings.cs  Settings.h  SevenSegmentDisplay.Designer.cs  SevenSegmentDisplay.cpp  SevenSegmentDisplay.cs  SevenSegmentDisplay.h  app.manifest  pch.cpp  pch.h  vcpkg-configuration.json  vcpkg.json
Minesweeper/Properties/: Resources.Designer.cs  Resources.resx
MinesweeperInstall/: Minesweeper.iss
bitmaps/: bomb-128.xpm  bomb-16.xpm  bomb-256.xpm  bomb-32.xpm  bomb-64.xpm  smile-1.xpm  smile-2.xpm  smile-3.xpm  smile-4.xpm
